--- a/.github/workflows/external_tables.yml
+++ b/.github/workflows/external_tables.yml
@@ -38,9 +38,12 @@ jobs:
           echo "Changed files:"
           echo "$CHANGED_FILES"
           
+          # external_tables直下のディレクトリを動的に検出
+          EXTERNAL_DIRS=$(find external_tables -mindepth 1 -maxdepth 1 -type d)
+          
           # 変更されたディレクトリを抽出
           CHANGED_DIRS=""
-          for dir in "external_tables/asset_name_master" "external_tables/asset_status_history" "external_tables/trade_history"; do
+          for dir in $EXTERNAL_DIRS; do
             if echo "$CHANGED_FILES" | grep -q "^$dir/"; then
               if [ -z "$CHANGED_DIRS" ]; then
                 CHANGED_DIRS="\"$dir\""
